Fix symbols overflow on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -123,6 +123,7 @@ body {
     color: white;
     background-size: cover;
     height: 100vh;
+    overflow: hidden;
     position: relative;
 }
 
@@ -235,7 +236,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    bottom: -50px;
+    top: -50px;
     width: 90%;
     height: 100px;
     left: 5%;
@@ -522,25 +523,6 @@ body {
     height: auto;
 }
 
-/* .message-content {
-    padding: 50px;
-    font-size: 42px;
-    color: white;
-    text-align: left;
-}
-
-.message-content>p {
-    color: #535353;
-    text-align: right;
-}
-
-.message-image {
-    width: 100%;
-    height: 100%;
-} */
-
-.hide{display:none !important}.show{display:block !important}.invisible{visibility:hidden}.text-hide{font:0/0 a;color:transparent;text-shadow:none;background-color:transparent;border:0}.hidden{display:none !important}.affix{position:fixed}@-ms-viewport{width:device-width}.visible-xs,.visible-sm,.visible-md,.visible-lg{display:none !important}.visible-xs-block,.visible-xs-inline,.visible-xs-inline-block,.visible-sm-block,.visible-sm-inline,.visible-sm-inline-block,.visible-md-block,.visible-md-inline,.visible-md-inline-block,.visible-lg-block,.visible-lg-inline,.visible-lg-inline-block{display:none !important}@media (max-width:767px){.visible-xs{display:block !important}table.visible-xs{display:table !important}tr.visible-xs{display:table-row !important}th.visible-xs,td.visible-xs{display:table-cell !important}}@media (max-width:767px){.visible-xs-block{display:block !important}}@media (max-width:767px){.visible-xs-inline{display:inline !important}}@media (max-width:767px){.visible-xs-inline-block{display:inline-block !important}}@media (min-width:768px) and (max-width:991px){.visible-sm{display:block !important}table.visible-sm{display:table !important}tr.visible-sm{display:table-row !important}th.visible-sm,td.visible-sm{display:table-cell !important}}@media (min-width:768px) and (max-width:991px){.visible-sm-block{display:block !important}}@media (min-width:768px) and (max-width:991px){.visible-sm-inline{display:inline !important}}@media (min-width:768px) and (max-width:991px){.visible-sm-inline-block{display:inline-block !important}}@media (min-width:992px) and (max-width:1199px){.visible-md{display:block !important}table.visible-md{display:table !important}tr.visible-md{display:table-row !important}th.visible-md,td.visible-md{display:table-cell !important}}@media (min-width:992px) and (max-width:1199px){.visible-md-block{display:block !important}}@media (min-width:992px) and (max-width:1199px){.visible-md-inline{display:inline !important}}@media (min-width:992px) and (max-width:1199px){.visible-md-inline-block{display:inline-block !important}}@media (min-width:1200px){.visible-lg{display:block !important}table.visible-lg{display:table !important}tr.visible-lg{display:table-row !important}th.visible-lg,td.visible-lg{display:table-cell !important}}@media (min-width:1200px){.visible-lg-block{display:block !important}}@media (min-width:1200px){.visible-lg-inline{display:inline !important}}@media (min-width:1200px){.visible-lg-inline-block{display:inline-block !important}}@media (max-width:767px){.hidden-xs{display:none !important}}@media (min-width:768px) and (max-width:991px){.hidden-sm{display:none !important}}@media (min-width:992px) and (max-width:1199px){.hidden-md{display:none !important}}@media (min-width:1200px){.hidden-lg{display:none !important}}.visible-print{display:none !important}@media print{.visible-print{display:block !important}table.visible-print{display:table !important}tr.visible-print{display:table-row !important}th.visible-print,td.visible-print{display:table-cell !important}}.visible-print-block{display:none !important}@media print{.visible-print-block{display:block !important}}.visible-print-inline{display:none !important}@media print{.visible-print-inline{display:inline !important}}.visible-print-inline-block{display:none !important}@media print{.visible-print-inline-block{display:inline-block !important}}@media print{.hidden-print{display:none !important}}
-
 /* ==========================================================================
    Helper classes
    ========================================================================== */
@@ -554,6 +536,9 @@ body {
     display: none !important;
 }
 
+@media (max-width:767px){
+    .hidden-xs{display:none !important}
+}
 
 /*
  * Hide only visually, but have it available for screen readers:
@@ -641,30 +626,62 @@ body {
    Modify as content requires.
    ========================================================================== */
 
+@media only screen and (min-device-width : 768px) {
+    .app__scene {
+        width: 60%;
+        left: 20%;
+    }
+
+    .app__content {
+        padding: 5% 0;
+    }
+    
+    .app__scene .app__scene--left > li:nth-child(1) {
+        margin-left: -100%;
+    }
+    
+    .app__scene .app__scene--left > li:nth-child(2) {
+        margin-left: 0%;
+    }
+
+    .app__scene .app__scene--left > li:nth-child(3) {
+        margin-left: -100%;
+    }
+    
+    .app__scene .app__scene--right > li:nth-child(1) {
+        margin-right: -100%;
+    }
+
+    .app__scene .app__scene--right > li:nth-child(3) {
+        margin-right: -150%;
+    }
+
+    .app__timer {
+        width: 50%;
+        left: 25%;
+    }
+}
+
 @media (min-width: 1200px) {
     /* Style adjustments for viewports that meet the condition */
-    .app__scene {
-        display: flex;
-        position: absolute;
-        width: 60%;
-        justify-content: space-between;
-        align-items: center;
-        bottom: 0;
-        left: 15%;
-        z-index: 6;
-        transform: rotate(-4deg);
+    .app__scene .app__scene--left > li:nth-child(1) {
+        margin-left: -150%;
     }
     
     .app__scene .app__scene--left > li:nth-child(2) {
         margin-left: 50%;
     }
+
+    .app__scene .app__scene--left > li:nth-child(3) {
+        margin-left: -150%;
+    }
     
     .app__scene .app__scene--right > li:nth-child(1) {
-        margin-left: 50%;
+        margin-right: -150%;
     }
 
     .app__scene .app__scene--right > li:nth-child(3) {
-        margin-left: 100%;
+        margin-right: -200%;
     }
     
     .app__scene ul {
@@ -696,18 +713,10 @@ body {
     }
     
     .app__timer {
-        position: absolute;
-        background: #ffffff;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        bottom: -50px;
-        width: 50%;
-        height: 100px;
-        left: 25%;
-        box-shadow: 0 6px 10px 0 rgba(141, 141, 141, 0.5);
+        width: 40%;
+        left: 30%;
     }
-    
+
     .app__timer p {
         font-size: 2rem;
     }
